--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>A tree</h1>
 		</header>
 			<section id="content">
 				<canvas id="FractalTree" data-processing-sources="FractalTree.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    color changing tree when clicked
 	    </footer>
 	</body>
 </html>
